Fix subscribe button width on mobile

--- a/style.css
+++ b/style.css
@@ -1313,4 +1313,8 @@ ul {
     .btn {
         width: 100%;
     }
+
+    .newsletter-form .btn {
+        width: auto;
+    }
 }
